# epc

./: .gitignore  AUTHORS  CHANGELOG.md  ChangeLog  INSTALL  Makefile.am  NEWS  README  README.md  TODO  bootstrap  configure.ac  darwin-remove-rpath.sh  ltmain.sh.patch  pom.xml
config/: acoracle.m4  epc.m4
doc/: Doxyfile.in  EPC-optimize.html  Makefile.am  epcdistr.rtf  epcman.doc  epcman.html  problems&changes.xls
doc/EPC-optimize_files/: filelist.xml  header.html  image001.wmz  image003.wmz  image009.wmz  oledata.mso
doc/c/: annotated.html  ansi2knr_8c.html  ansi2knr_8c_source.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_81ad383a8e40d08ec3aced46782934f8.html  dir_c85d3e3c5052e9ad9ce18c6863244a25.html  epc_8h.html  epc_8h_source.html  epc_8pc.html  epc_8pc_source.html  epc__defs_8h.html  epc__defs_8h_source.html  epc__lib_8c.html  epc__lib_8c_source.html  epc__lib_8h.html  epc__lib_8h_source.html  epc__xml_8c.html  epc__xml_8c_source.html  epc__xml_8h.html  epc__xml_8h_source.html  files.html  functions.html  functions_vars.html  globals.html  globals_b.html  globals_c.html  globals_d.html  globals_defs.html  globals_e.html  globals_enum.html  globals_eval.html  globals_f.html  globals_func.html  globals_g.html  globals_i.html  globals_k.html  globals_l.html  globals_m.html  globals_n.html  (+52 more)
doc/epcman_files/: filelist.xml  header.html
doc/sql/: ORACLE_TOOLS-summary.html  ORACLE_TOOLS.html  allpackages.html  allschemas.html  application.xml  deprecated-list.html  generator.html  index-list.html  index.html  summary.html
doc/sql/ORACLE_TOOLS/: EPC.html  EPC_CLNT.html  EPC_SRVR.html  STD_OBJECT_MGR.html
examples/: Makefile.am
examples/demo/: ChangeLog  Makefile.am  demo.idl  main.c
examples/soap/: Makefile.am  qotd.idl
examples/xmlrpc/: Makefile.am  currentTime.idl  currentTime.sql  mirror.idl  mirror.sql
replace/: Makefile.am  malloc.c  replace.h
src/: Makefile.am
src/lib/: ChangeLog  Makefile.am  ansi2knr.c  epc.h  epc.pc  epc_defs.h  epc_lib.c  epc_xml.c  epc_xml.h  idl_defs.h  lsnr.c
src/prog/: Makefile.am  epcdaemon.pl.in  idl_kwrd.h  idl_l.l  idl_prs.c  idl_prs.h  idl_y.y  yy.h  yywrap.c
src/sql/: 0001.TYPE_SPEC.EPC_CLNT_OBJECT.sql  0001.TYPE_SPEC.STD_OBJECT.sql  0002.TYPE_SPEC.EPC_CLNT_OBJECT.sql  0003.TABLE.STD_OBJECTS.sql  02.TYPE_SPEC.EPC_CLNT_OBJECT.sql  06.TABLE.STD_OBJECTS.sql  16.INDEX.STD_OBJECTS.sql  Makefile.am  R__0002.PACKAGE_SPEC.EPC.sql  R__0003.PACKAGE_SPEC.EPC_SRVR.sql  R__0004.PACKAGE_SPEC.EPC_CLNT.sql  R__0004.PACKAGE_SPEC.STD_OBJECT_MGR.sql  R__0005.TYPE_BODY.EPC_CLNT_OBJECT.sql  R__0005.TYPE_BODY.STD_OBJECT.sql  R__0006.PACKAGE_BODY.EPC_SRVR.sql  R__0007.PACKAGE_BODY.EPC_CLNT.sql  R__0011.PACKAGE_BODY.EPC_SRVR.sql  R__0012.PACKAGE_BODY.EPC_CLNT.sql  R__09.PACKAGE_SPEC.EPC.sql  R__09.PACKAGE_SPEC.EPC_CLNT.sql  R__09.PACKAGE_SPEC.EPC_SRVR.sql  R__14.PACKAGE_BODY.EPC.sql  R__14.PACKAGE_BODY.EPC_CLNT.sql  R__14.PACKAGE_BODY.STD_OBJECT_MGR.sql  R__15.TYPE_BODY.EPC_CLNT_OBJECT.sql  R__15.TYPE_BODY.STD_OBJECT.sql  V0001__TYPE_SPEC.STD_OBJECT.sql  V0003__TABLE.STD_OBJECTS.sql  V20221203171807.0001__TYPE_SPEC.EPC_CLNT_OBJECT.sql  epc.pkb  epc.pks  epc_clnt.pkb  epc_clnt.pks  epc_clnt_info_object.typ  epc_clnt_object.tyb  epc_clnt_object.typ  epc_clnt_objtype.typ  epc_objects.tab  epc_objtype.typ  epc_objtype_mgr.pkb  (+13 more)
test/: Makefile.am  client.sql  epctest.idl  epctest.ref  epctest.sql  main.c  proc.c  server.sql  str.idl  test2.client.ref
trunk/epc/: AUTHORS  ChangeLog  Doxyfile  INSTALL  Makefile.am  NEWS  README  TODO  bootstrap  configure.ac  lint.am
trunk/epc/config/: acoracle.m4  epc.m4
trunk/epc/doc/: Doxyfile.in  EPC-optimize.doc  Makefile.am  epcdistr.rtf  epcman.doc  epcpf.xls
trunk/epc/examples/: Makefile.am
trunk/epc/examples/demo/: ChangeLog  Makefile.am  demo.idl  main.c
trunk/epc/examples/soap/: Makefile.am  aws.idl  qotd.idl
trunk/epc/examples/xmlrpc/: Makefile.am  currentTime.sql
trunk/epc/replace/: Makefile.am
trunk/epc/src/: Makefile.am
trunk/epc/src/lib/: ChangeLog  Makefile.am  ansi2knr.c  epc.h  epc.pc  epc_defs.h  epc_lib.c  epc_lib.h  epc_xml.c  epc_xml.h  idl_defs.h  lsnr.c
trunk/epc/src/prog/: ChangeLog  Makefile.am  epcdaemon  epcdaemon.cmd  epcdaemon.pl.in  idl_kwrd.h  idl_l.l  idl_prs.c  idl_prs.h  idl_y.y  yywrap.c
trunk/epc/src/sql/: Makefile.am  epc.pkb  epc.pks  epc_clnt.pkb  epc_clnt.pks  epc_clnt_info_object.tyb  epc_clnt_info_objtype.tyb  epc_clnt_info_objtype.typ  epc_clnt_info_tabtype.typ  epc_clnt_object.tyb  epc_clnt_object.typ  epc_clnt_objtype.tyb  epc_install.sql  epc_objtype_mgr.pkb  epc_objtype_mgr.pks  epc_srvr.pkb  epc_srvr.pks  epc_tab.tab  login.sql  std_object.tyb  std_object.typ  std_object_mgr.pkb  std_object_mgr.pks  std_objects.tab
trunk/epc/test/: Makefile.am  README  client.sql  epctest.idl  epctest.ref  epctest.sql  main.c  proc.c  server.sql  str.sql  test3.client.ref  unittest.sql
trunk/epc/utils/: Makefile.am  daemon.pl  empty_pipes.prc
utils/: Makefile.am  empty_pipes.html  empty_pipes.prc  empty_pipes.sql
